--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
-# env:
-#   triplet: x64-windows
-#   config: x64-DebugWithTests
+env:
+  triplet: x64-windows
+  config: x64-DebugWithTests
 #   cmake-args: -DINSTALL_GTEST=OFF -DBUILD_TESTING=ON -DBUILD_TRANSPORT_CURL=ON -DBUILD_STORAGE_SAMPLES=ON
 #   build-dir: {{ github.workspace }}/out/build/x64-DebugWithTests
 
@@ -20,12 +20,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # - name: Setup Vcpkg and find MSVC Compiler
-    #   uses: lukka/run-vcpkg@v7
-    #   with:
-    #     setupOnly: true
-    #     vcpkgGitCommitId: bd5ea16b97e91cb620fed0e10b7d9b3a8a943a52
-    #     vcpkgTriplet: ${{ env.triplet }}
+    - name: Setup Vcpkg and find MSVC Compiler
+      uses: lukka/run-vcpkg@v7
+      with:
+        setupOnly: true
+        vcpkgGitCommitId: bd5ea16b97e91cb620fed0e10b7d9b3a8a943a52
+        vcpkgTriplet: ${{ env.triplet }}
 
     # - run: |
     #     $VCPKG_ROOT/vcpkg install libxml2:${{ env.triplet }}
